Resolves tdf#162018 Unexpected loss in focus in the "Manage Changes"

window when adding a change in the document (Track changes mode)

Change-Id: Iecb49346cfe5d4f447b07ec5451c753c90dddb44
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170460
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>