sw/qa/uitest/writer_tests7/tdf90401.py
@@ -79,6 +79,7 @@ class tdf90401(UITestCase):
                     # check removed personal info on tracked changes
                     with self.ui_test.execute_modeless_dialog_through_command('.uno:AcceptTrackedChanges', close_button="close") as xTrackDlg:
                         xTreeList = xTrackDlg.getChild('writerchanges')
+                        xTreeList.getChild('0').executeAction("SELECT", tuple())
                         state = get_state_as_dict(xTreeList)
                         # This was 'NL\t11/03/2020 19:19:05\t', containing personal info
                         self.assertEqual(state['SelectEntryText'], 'Author1\t01/01/1970 00:00:00\t')
@@ -130,6 +131,7 @@ class tdf90401(UITestCase):
 
                     with self.ui_test.execute_modeless_dialog_through_command('.uno:AcceptTrackedChanges', close_button="close") as xTrackDlg:
                         xTreeList = xTrackDlg.getChild('writerchanges')
+                        xTreeList.getChild('0').executeAction("SELECT", tuple())
                         state = get_state_as_dict(xTreeList)
                         # This was 'NL\t11/03/2020 19:19:05\t', containing personal info
                         self.assertEqual(state['SelectEntryText'], 'Author1\t01/01/1970 00:00:00\t')
